[tool.poetry]
name = "minikameter"
version = "0.1.0"
description = ""
authors = ["umatbro <umatbroo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
sqlmodel = "^0.0.4"
uvicorn = "^0.15.0"
alembic = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
