[tool.poetry]
name = "minikameter"
version = "0.1.0"
description = ""
authors = ["umatbro <umatbroo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.70.0"
sqlmodel = "^0.0.4"
alembic = "^1.7.4"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
numpy = "^1.21.2"
pandas = "^1.3.3"
matplotlib = "^3.4.3"


[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
